:wrench: home page gooey effect issue: fix z-index

--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -22,6 +22,7 @@ h1.title-home
 
     .e-hold
         @include desk
+            position: relative
             width: 93.2%
 
 //- =========================  HEADER  ========================= -//
@@ -236,7 +237,6 @@ h1.title-home
 .awards
     padding-top: 7rem
     padding-bottom: 2rem
-    z-index: 1
     position: relative
     background: #000
     @include desk
